# LinkSiren

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  link_siren.py  pyproject.toml  pytest.ini  requirements.txt  template.library-ms  template.searchConnector-ms  template.url
.github/workflows/: pylint.yml
.test_github/workflows/: build_and_test.yml  suggested_workflow.yml
docs/: ATTACK-PATHS.md  AUTHENTICATION.md  CRAWLING.md  DEPLOY.md  DETECTION.md  TROUBLESHOOTING.md
docs/subcommands/: check.md  coerce.md  detect.md  discover.md  listen.md  report.md  target-sessions.md
src/linksiren/: __main__.py  arg_parser.py  functions.py  impure_functions.py  logging_config.py  mode_handlers.py  pure_functions.py  target.py  template.lnk  template.searchConnector-ms  template.url
tests/: conftest.py  test.py  test_auth.py  test_compute_threshold_date.py  test_create_lnk_payload.py  test_deploy_safety.py  test_filter_targets.py  test_get_lnk_template.py  test_get_rankings.py  test_get_sorted_rankings.py  test_is_active_file.py  test_is_valid_payload_name.py  test_mode_handlers.py  test_parse_target.py  test_process_targets.py  test_read_targets.py  test_sort_rankings.py  test_target.py  test_write_list_to_file.py  test_write_payload_local.py
