# pyproject.toml

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linksiren"
version = "0.9.1"
description = "Generation, targeted deployment, and scalable cleanup for files that coerce Windows authentication."
readme = "README.md"
authors = [{ name = "George Hamilton"}]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]
keywords = ["coerce", "pentest", "windows", "authentication", "coercion"]
dependencies = [
    "impacket>=0.12.0",
    "tqdm>=4.68.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=25.0.0",
    "bumpver>=2024.0.0",
    "isort>=5.13.0",
    "pip-tools>=7.4.0",
    "pytest>=8.0.0",
    "coverage>=7.6.0",
    "ruff>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/gjhami/LinkSiren"
Issues = "https://github.com/gjhami/LinkSiren/issues"

[project.scripts]
linksiren = "linksiren.__main__:main"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']